# narimanov_full_app

./: .gitignore  package-lock.json
backend/: Makefile  alembic.ini  plan.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260529193500_create_issues_table.py  20260529200000_add_issue_moderation_fields.py  20260529203000_create_workers_table.py  20260529210000_add_issue_assignments.py  20260529210500_create_issue_images_table.py  20260529211500_add_issue_severity.py  20260529212000_add_issue_details_tables_and_columns.py  20260529213000_seed_default_departments.py  20260531010000_add_issue_in_progress_status.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  database.py  exceptions.py  redis.py  s3.py
backend/app/dependencies/: db.py  redis.py  s3.py
backend/app/modules/issues/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/water_management/: __init__.py  config.py  data_store.py  dispatch.py  forecast.py  risk.py  router.py  runoff.py  schemas.py  service.py
backend/app/modules/workers/: models.py  repository.py  router.py  schemas.py  service.py  utils.py
backend/tests/: test_issue_assignments.py  test_issue_details.py  test_issues.py  test_s3.py  test_water_management.py  test_workers.py
backend/water-management/docs/: requirements_en.md
backend/water-management/flood-intelligence/: .gitignore  CLAUDE.md  README.md  requirements-pipeline.txt  requirements.txt
backend/water-management/flood-intelligence/scripts/: run.sh
mobile_app/: Makefile  (+8 more)
(+183 files in other folders)
