[project]
name = "city-dispatch-backend"
version = "0.1.0"
description = "Future city-dispatch backend with an Issues module foundation."
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "boto3>=1.34.0",
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]